[tool.poetry]
name = "cloudalerts"
version = "0.1.0"
description = ""
authors = ["Bryan Sieber <bsieber@mozilla.com>"]

[[tool.poetry.source]]
name = "mozilla-it"
url = "https://dp2-prod.appspot.com/pypi"

[tool.poetry.dependencies]
python = "^3.6.1"
google-cloud-logging = "^1.15.0"

[tool.poetry.dev-dependencies]
behave = "*"
pre-commit = "*"
jinja2 = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
